Agregado de SCSS, SEO, mixin, map, variables, extend

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La llave de plata</title>
+    <meta name="description" content="Blog literario, donde podras encontrar reseñas, mini reseñas y recomendaciones de variados autores"/>
+    <meta name="keywords" content="Literatura, blog, reseñas, recomendaciones, libros, lectura">
+    <title>La llave de plata, blog Literario</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -82,8 +84,8 @@
                             </div>
                             <div class="asideReseñas">
                                 <li>Aventura</li>
-                            </div class="asideReseñas">
-                            <div>
+                            </div>
+                            <div  class="asideReseñas">
                                 <li> Ciencia Ficción</li>
                             </div>
                             <div class="asideReseñas">
@@ -130,9 +132,14 @@
  
     <footer class="footer">
         <h4>Visitanos en nuestras redes</h4>
-            <a href="https://www.facebook.com/lallavedeplatablog" target="_blank" > <img src="./assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="facebook"/> </a>
-             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><img src="./assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="goodreads"/> </a>
-            <img src="./assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="instagram"/>
+            <a href="https://www.facebook.com/lallavedeplatablog" target="_blank" > <img src="./assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="redes"/> </a>
+             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><img src="./assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="redes"/> </a>
+            <img src="./assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="redes"/>
+            <div class="buttons">
+                <a href="https://www.facebook.com/lallavedeplatablog" target="_blank"><button class="bt-Facebook" >Facebook</button></a>
+                <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><button class="bt-Goodreads">Goodreads</button></a>
+                <button class="bt-Instagram">Instagram</button>
+            </div>
     </footer>
 
     
