--- a/paginas/minireseñas/carmilla.html
+++ b/paginas/minireseñas/carmilla.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carmilla</title>
+    <meta name="description" content="Mini reseña sobre el libro Carmilla de Joseph Sheridan" />
+    <meta name="keywords" content="Literatura, libro, Carmilla, autor, Sheridan, Joseph">
+    <title>Carmilla reseña</title>
    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
@@ -32,7 +34,7 @@
                     <div class="resumen">
                         <ul>
                             <li class="resumenLi">Titulo: Carmilla</li>
-                            <li class="resumenLi">Autor: Joseph</li>
+                            <li class="resumenLi">Autor: Joseph Sheridan Le Fanu</li>
                             <li class="resumenLi" >Editorial: - </li>
                             <li class="resumenLi">Año de primera edición: 1872</li>
                             <li class="resumenLi"> Género: Horror</li>
@@ -126,9 +128,14 @@
 
     <footer class="footer">
         <h4>Visitanos en nuestras redes</h4>
-            <a href="https://www.facebook.com/lallavedeplatablog" target="_blank" > <img src="../../assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="facebook"/> </a>
-             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><img src="../../assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="goodreads"/> </a>
-            <img src="../../assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="instagram"/>
+            <a href="https://www.facebook.com/lallavedeplatablog" target="_blank" > <img src="../../assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="redes"/> </a>
+             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><img src="../../assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="redes"/> </a>
+            <img src="../../assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="redes"/>
+            <div class="buttons">
+                <a href="https://www.facebook.com/lallavedeplatablog" target="_blank"><button class="bt-Facebook" >Facebook</button></a>
+                <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><button class="bt-Goodreads">Goodreads</button></a>
+                <button class="bt-Instagram">Instagram</button>
+            </div>
     </footer>
     
 </body>
