--- a/paginas/minireseñas/minireseñas.html
+++ b/paginas/minireseñas/minireseñas.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini reseñas</title>
+    <meta name="description" content="Clasificación de mini reseñas">
+    <meta name="keywords" content="Literatura, mini reseñas, cortas, autores, libros">
+    <title>Mini reseñas blog</title>
     <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
@@ -30,16 +32,16 @@
         <div class="divPrincipal">
                 <div class="texto ordenAlf">    
                     <h4>Mini reseñas en orden alfabético.</h4>
-                    <div>
+                    <div >
                         <ul>
                             <li>#</li>
-                            <li><a href="./viajesubmarino.html" > 20000 Leguas de viaje submarino - Julio Verne</a></li>
+                            <li ><a href="./viajesubmarino.html" class="asideReseñas"  > 20000 Leguas de viaje submarino - Julio Verne</a></li>
                         </ul>
                     </div>
                     <div>
                         <ul>
                             <li>A</li>
-                            <li><a href="./alFinalDeLaNoche.html"> Al final de la nnoche - R.L.Stine</a></li>
+                            <li><a href="./alFinalDeLaNoche.html" class="asideReseñas"> Al final de la nnoche - R.L.Stine</a></li>
                             <li></li>
                         </ul>
                     </div>
@@ -51,7 +53,7 @@
                     <div>
                         <ul>
                             <li>C</li>
-                            <li><a href="./carmilla.html"> Carmilla</a></li>
+                            <li><a href="./carmilla.html" class="asideReseñas"> Carmilla</a></li>
                         </ul>
                     </div>
                     <div>
@@ -189,7 +191,7 @@
                                 <a href="./paginas/minireseñas/carmilla.html"><li>Mini reseña: Carmilla</li></a>
                             </div>
 
-                    </ul>
+                        </ul>
 
                             <div>
                                 <h4>Categorías</h4>
@@ -250,9 +252,14 @@
 
     <footer class="footer">
         <h4>Visitanos en nuestras redes</h4>
-            <a href="https://www.facebook.com/lallavedeplatablog" target="_blank" > <img src="../../assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="facebook"/> </a>
-             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><img src="../../assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="goodreads"/> </a>
-            <img src="../../assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="instagram"/>
+            <a href="https://www.facebook.com/lallavedeplatablog" target="_blank" > <img src="../../assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="redes"/> </a>
+             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><img src="../../assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="redes"/> </a>
+            <img src="../../assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="redes"/>
+            <div class="buttons">
+                <a href="https://www.facebook.com/lallavedeplatablog" target="_blank"><button class="bt-Facebook" >Facebook</button></a>
+                <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><button class="bt-Goodreads">Goodreads</button></a>
+                <button class="bt-Instagram">Instagram</button>
+            </div>
     </footer>
     
 </body>
