--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Autores del blog">
+    <meta name="keywords" content="Lectores, libros, historia, autores">
     <title>Nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -74,8 +76,8 @@
                                         </div>
                                         <div class="asideReseñas">
                                             <li>Aventura</li>
-                                        </div class="asideReseñas">
-                                        <div>
+                                        </div>
+                                        <div  class="asideReseñas">
                                             <li>Ciencia Ficción</li>
                                         </div>
                                         <div class="asideReseñas">
@@ -122,9 +124,14 @@
 
     <footer class="footer">
         <h4>Visitanos en nuestras redes</h4>
-            <a href="https://www.facebook.com/lallavedeplatablog"  target="_blank"> <img src="../assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="facebook"/> </a>
-             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank" ><img src="../assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="goodreads"/> </a>
-            <img src="../assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="instagram"/>
+            <a href="https://www.facebook.com/lallavedeplatablog"  target="_blank"> <img src="../assets/img/facebook2.png" alt="Facebook" title="Facebook" width="100px"  class="redes"/> </a>
+             <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank" ><img src="../assets/img/goodreads2.png" alt="Goodreads" title="Goodreads" width=50px class="redes"/> </a>
+            <img src="../assets/img/instagram2.png" alt="Instagram" title="Instagram" width="100px" class="redes"/>
+            <div class="buttons">
+                <a href="https://www.facebook.com/lallavedeplatablog" target="_blank"><button class="bt-Facebook" >Facebook</button></a>
+                <a href="https://www.goodreads.com/user/show/52882499-la-llave-de-plata" target="_blank"><button class="bt-Goodreads">Goodreads</button></a>
+                <button class="bt-Instagram">Instagram</button>
+            </div>
     </footer>
     
 </body>
